language/move-lang/tests/move_check/parser/struct_native_with_fields.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/struct_native_with_fields.move:3:21
  │
3 │     native struct S { f: u64 }
  │                     ^
  │                     │
  │                     Unexpected '{'
  │                     Expected ';'

