language/move-lang/tests/move_check/parser/struct_native_with_fields.move
module M {
    // Native structs should not specify fields.
    native struct S { f: u64 }
}
